added basic hero html & css

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
-    <p>
-        hi there my name is ranem
-    </p>
-    <i class="fa fa-battery-quarter" aria-hidden="true"></i>
+    <div class="hero-header">
+        <h2>
+            🙋‍♀️ Hi I'am
+        </h2>
+        <h1>Ranem Al-Haffar</h1>
+        <p>Front-end developer based is syria</p>
+        <a href="#" class="btn btn-hero">Contact me</a>
+    </div>
+
 </body>
 
 </html>
