--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="red">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -16,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/5c0bd128e0.js" crossorigin="anonymous"></script>
     <title>Ranem Al-Haffar - Front-end developer</title>
 </head>
@@ -26,7 +28,7 @@
             🙋‍♀️ Hi I'am
         </h2>
         <h1>Ranem Al-Haffar</h1>
-        <p>Front-end developer based is syria</p>
+        <p class="mb-3">Front-end developer based is syria</p>
         <a href="#" class="btn btn-hero">Contact me</a>
     </div>
 
