--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="red">
+    <meta name="theme-color" content="#6c63ff">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -31,6 +31,23 @@
         <p class="mb-3">Front-end developer based is syria</p>
         <a href="#" class="btn btn-hero">Contact me</a>
     </div>
+    <p class="text-center m-5">
+        Featured Project which my best projects be choice to show
+    </p>
+    <h2 class="mb-5">
+        Yogurt Project
+    </h2>
+    <p>
+        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+        texts.
+        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
+        named
+        Duden flows by
+    </p>
+    <a href="#" class="btn btn-primary">
+        Learn more
+    </a>
+
 
 </body>
 
