finished homepage content

--- a/index.html
+++ b/index.html
@@ -34,19 +34,65 @@
     <p class="text-center m-5">
         Featured Project which my best projects be choice to show
     </p>
-    <h2 class="mb-5">
-        Yogurt Project
-    </h2>
-    <p>
-        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-        texts.
-        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
-        named
-        Duden flows by
-    </p>
-    <a href="#" class="btn btn-primary">
-        Learn more
-    </a>
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="images/yougurt.jpg" alt="" class="img-fluid ">
+            </div>
+            <div class="col project-discribtion">
+                <h2 class="mb-5">
+                    Yogurt Project
+                </h2>
+                <p class="text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean. A small river named Duden flows by
+                </p>
+                <a href="#" class="btn project-btn mt-5">
+                    View project details
+                </a>
+            </div>
+        </div>
+        <div class="row mb-5">
+
+            <div class="col project-discribtion">
+                <h2 class="mb-5">
+                    Weather App
+                </h2>
+                <p class="text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean. A small river named Duden flows by
+                </p>
+                <a href="#" class="btn project-btn mt-5">
+                    View project details
+                </a>
+            </div>
+            <div class="col d-none d-lg-block">
+                <img src="images/weather.jpg" alt="" class="img-fluid ">
+            </div>
+
+        </div>
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="images/dictionary.jpg" alt="" class="img-fluid ">
+            </div>
+            <div class="col project-discribtion">
+                <h2 class="mb-5">
+                    Dictionary App
+                </h2>
+                <p class="text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean. A small river named Duden flows by
+                </p>
+                <a href="#" class="btn project-btn mt-5">
+                    View project details
+                </a>
+            </div>
+        </div>
+    </div>
+
 
 
 </body>
