made the about page responsive

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container about-page">
         <div class="row">
-            <div class="col mt-5">
+            <div class="col-lg mt-5">
                 <h1>Hi I am Ranem Al-Haffar</h1>
                 <h3>Frontend Developer, based in Syria.</h3>
                 <p class="text-muted">
@@ -36,7 +36,7 @@
                 </p>
                 <a href="#" class="btn btn-hero">View all Projects</a>
             </div>
-            <div class="col">
+            <div class="col-lg">
                 <img src="images/pexel.jpg" class="img-fluid my-pic">
             </div>
         </div>
