added and styled work page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h2>
         <h1>Ranem Al-Haffar</h1>
         <p class="mb-3">Front-end developer based is syria</p>
-        <a href="about.html" class="btn btn-hero">Contact me(to about page)</a>
+        <a href="work.html" class="btn btn-hero">Contact me(to work page)</a>
     </div>
     <p class="text-center m-5">
         Featured Project which my best projects be choice to show
