added the header to the home page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,33 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class=" d-flex justify-content-between">
+            <img src="/images/logo (1).jpg" alt="" class="logo d-none d-md-block">
+            <img src="/images/logo-small.jpg" alt="" class="logo d-block d-md-none">
+            <ul class="">
+                <li class="active">
+                    <a href="/">Home</a>
+                </li>
+                <li class="">
+                    <a href="/about.html">About</a>
+                </li>
+                <li class="">
+                    <a href="/work.html">Work</a>
+                </li>
+                <li class="">
+                    <a href="/contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="hero-header">
         <h2>
             🙋‍♀️ Hi I'am
         </h2>
         <h1>Ranem Al-Haffar</h1>
         <p class="mb-3">Front-end developer based is syria</p>
-        <a href="contact.html" class="btn btn-hero">Contact me(to contact page)</a>
+        <a href="contact.html" class="btn btn-hero">Contact me</a>
     </div>
     <p class="text-center m-5">
         Featured Project which my best projects be choice to show
