added the footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col d-none d-lg-block">
                 <img src="images/dictionary.jpg" alt="" class="img-fluid ">
             </div>
-            <div class="col project-discribtion">
+            <div class="col project-discribtion mb-5">
                 <h2 class="mb-5">
                     Dictionary App
                 </h2>
@@ -111,6 +111,37 @@
                 </a>
             </div>
         </div>
+    </div>
+    <div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h4>Work Inquiry</h4>
+                    <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                    <a href="/contact.html" class="btn btn-hero">
+                        Contact me
+                    </a>
+                </div>
+
+            </div>
+
+            <div class="d-flex justify-content-center email-link mb-5">
+                <a href="mailto:ranem.alhaffar@hotmail.com">ranem@hotmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center mb-5">
+                <a href="">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+        </footer>
     </div>
 
 
