--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#6c63ff">
+    <meta name="description" content="Ranem al haffar a computer engineer & a Front-end developer based in syria.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -25,20 +26,22 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="/images/logo (1).jpg" alt="" class="logo d-none d-md-block">
-            <img src="/images/logo-small.jpg" alt="" class="logo d-block d-md-none">
-            <ul class="">
+            <img src="/images/logo (1).jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
+                title="Homepage">
+            <img src="/images/logo-small.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
+                title="Homepage">
+            <ul>
                 <li class="active">
-                    <a href="/">Home</a>
+                    <a href="/" title="homepage">Home</a>
                 </li>
-                <li class="">
-                    <a href="/about.html">About</a>
+                <li>
+                    <a href="/about.html" title="about ranem">About</a>
                 </li>
-                <li class="">
-                    <a href="/work.html">Work</a>
+                <li>
+                    <a href="/work.html" title="ranem's work">Work</a>
                 </li>
-                <li class="">
-                    <a href="/contact.html">Contact</a>
+                <li>
+                    <a href="/contact.html" title="contact ranem">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +52,7 @@
         </h2>
         <h1>Ranem Al-Haffar</h1>
         <p class="mb-3">Front-end developer based is syria</p>
-        <a href="contact.html" class="btn btn-hero">Contact me</a>
+        <a href="contact.html" class="btn btn-hero" title="contact ranem">Contact me</a>
     </div>
     <p class="text-center m-5">
         Featured Project which my best projects be choice to show
@@ -57,7 +60,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/yougurt.jpg" alt="" class="img-fluid ">
+                <img src="images/yougurt.jpg" alt="Yogurt Project" class="img-fluid ">
             </div>
             <div class="col project-discribtion">
                 <h2 class="mb-5">
@@ -68,7 +71,7 @@
                     the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
                     language ocean. A small river named Duden flows by
                 </p>
-                <a href="#" class="btn project-btn mt-5">
+                <a href="/work.html" class="btn project-btn mt-5">
                     View project details
                 </a>
             </div>
@@ -84,18 +87,18 @@
                     the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
                     language ocean. A small river named Duden flows by
                 </p>
-                <a href="#" class="btn project-btn mt-5">
+                <a href="/work.html" class="btn project-btn mt-5">
                     View project details
                 </a>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="images/weather.jpg" alt="" class="img-fluid ">
+                <img src="images/weather.jpg" alt="Weather App" class="img-fluid ">
             </div>
 
         </div>
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/dictionary.jpg" alt="" class="img-fluid ">
+                <img src="images/dictionary.jpg" alt="Dictionary App" class="img-fluid ">
             </div>
             <div class="col project-discribtion mb-5">
                 <h2 class="mb-5">
@@ -106,7 +109,7 @@
                     the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
                     language ocean. A small river named Duden flows by
                 </p>
-                <a href="#" class="btn project-btn mt-5">
+                <a href="/work.html" class="btn project-btn mt-5">
                     View project details
                 </a>
             </div>
@@ -120,7 +123,7 @@
                     <p class="text-muted">Let's work together</p>
                 </div>
                 <div>
-                    <a href="/contact.html" class="btn btn-hero">
+                    <a href="/contact.html" class="btn btn-hero" title="contact ranem">
                         Contact me
                     </a>
                 </div>
@@ -128,19 +131,26 @@
             </div>
 
             <div class="d-flex justify-content-center email-link mb-5">
-                <a href="mailto:ranem.alhaffar@hotmail.com">ranem@hotmail.com</a>
+                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem@hotmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
-                <a href="">
+                <a href="https://github.com/Ranem97" target="_blank" title="Ranem Github profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="">
-                    <i class="fab fa-twitter"></i>
+                <a href="http://facebook.com/ranem.haffar1" target="_blank" title="Ranem facebook profile">
+                    <i class="fab fa-facebook"></i>
                 </a>
-                <a href="">
+                <a href="https://instagram.com/ranem.haffar" target="_blank" title="ranem instagram profile">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
+            <p class="text-center mt-5">
+                👩‍💻 This project was coded by Ranem Al Haffar, and it is
+                <a href="https://github.com/Ranem97/portfolio-project" target="_blank">
+                    open source
+                </a>
+                .
+            </p>
         </footer>
     </div>
 
