fixed the nav bar

--- a/contact.html
+++ b/contact.html
@@ -26,22 +26,20 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="/images/logo (1).jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
-                title="Homepage">
-            <img src="/images/logo-small.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
-                title="Homepage">
+            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
+            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
             <ul>
                 <li>
-                    <a href="/" title="homepage">Home</a>
+                    <a href="./index.html" title="homepage">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html" title="about ranem">About</a>
+                    <a href="./about.html" title="about ranem">About</a>
                 </li>
                 <li>
-                    <a href="/work.html" title="ranem's work">Work</a>
+                    <a href="./work.html" title="ranem's work">Work</a>
                 </li>
                 <li class="active">
-                    <a href="/contact.html" title="contact ranem">Contact</a>
+                    <a href="/" title="contact ranem">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -51,7 +49,7 @@
             <h1>Let's get in touch!</h1>
             <h3>email</h3>
             <a href="mailto:ranem.alhaffar@hotmail.com" target="_blank" title="ranem email">
-                <p>ranem@gmail.com</p>
+                <p>ranem.alhaffar@hotmail.com</p>
             </a>
             <h3>Twitter</h3>
             <a href="https://twitter.com" target="_blank" title="ranem twitter account">
@@ -80,7 +78,7 @@
             </div>
 
             <div class="d-flex justify-content-center email-link mb-5">
-                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem@hotmail.com</a>
+                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem.alhaffar@hotmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
                 <a href="https://github.com/Ranem97" target="_blank" title="Ranem Github profile">
