--- a/index.html
+++ b/index.html
@@ -26,22 +26,20 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="/images/logo (1).jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
-                title="Homepage">
-            <img src="/images/logo-small.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
-                title="Homepage">
+            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
+            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
             <ul>
                 <li class="active">
                     <a href="/" title="homepage">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html" title="about ranem">About</a>
+                    <a href="./about.html" title="about ranem">About</a>
                 </li>
                 <li>
-                    <a href="/work.html" title="ranem's work">Work</a>
+                    <a href="./work.html" title="ranem's work">Work</a>
                 </li>
                 <li>
-                    <a href="/contact.html" title="contact ranem">Contact</a>
+                    <a href="./contact.html" title="contact ranem">Contact</a>
                 </li>
             </ul>
         </nav>
