added my projects

--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/yougurt.jpg" alt="Yogurt Project" class="img-fluid ">
+                <img src="images/photograper-portfolio.png" alt="photograper portfolio" class="img-fluid ">
             </div>
             <div class="col project-discribtion">
                 <h2 class="mb-5">
-                    Yogurt Project
+                    Photograper Portfolio
                 </h2>
                 <p class="text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean. A small river named Duden flows by
+                    The Design of this project was provided to me by the good people at the SheCodes foundation,
+                    It was initially a figma design and was coded by me as a practice on transferring ui/ ux designs in
+                    to
+                    actual code, The project is available to any one as i have kept it Open source and can be found on
+                    my Github account.
                 </p>
                 <a href="/work.html" class="btn project-btn mt-5">
                     View project details
@@ -81,31 +83,32 @@
                     Weather App
                 </h2>
                 <p class="text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean. A small river named Duden flows by
+                    A live weather application powered by React, and OpenWeather API, I also added the night mood
+                    button toggler as a fun twist, this project is also open sourced and can be found on my Github
+                    account.
                 </p>
                 <a href="/work.html" class="btn project-btn mt-5">
                     View project details
                 </a>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="images/weather.jpg" alt="Weather App" class="img-fluid ">
+                <img src="images/Weather-both.png" alt="Weather App" class="img-fluid weather">
             </div>
 
         </div>
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/dictionary.jpg" alt="Dictionary App" class="img-fluid ">
+                <img src="images/dictionary.png" alt="Dictionary App" class="img-fluid">
             </div>
             <div class="col project-discribtion mb-5">
                 <h2 class="mb-5">
                     Dictionary App
                 </h2>
                 <p class="text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean. A small river named Duden flows by
+                    The dictionary application is my latest React app, I used two diffrent sets of API's, one for
+                    fetching
+                    the information and the Pexels API to fetch the images, this project is open source and can be found
+                    on my github account.
                 </p>
                 <a href="/work.html" class="btn project-btn mt-5">
                     View project details
