--- a/about.html
+++ b/about.html
@@ -45,20 +45,47 @@
         </nav>
     </div>
     <div class="container about-page">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-lg mt-5">
                 <h1>Hi I am Ranem Al-Haffar</h1>
                 <h3>Frontend Developer, based in Syria.</h3>
                 <p class="text-muted">
-                    For anyone who wants to start learning code, this workshop is very interesting. You will be
-                    challenged with
-                    different exercises, and everything is well explained, homework and deadlines are good for keep
-                    focus
+                    I graduated from Damascus university in 2021, from the computer and automation engineering,
+                    computer major.<br>
+                    I started my coding journey seriously from 2020, it was when I knew I wanted to be a Front-end
+                    developer
+                    and do this for a living.
+                    This portfolio is my way of showing my passion to the world and hopefully a ticket to a job I really
+                    want.
+
                 </p>
                 <a href="/work.html" class="btn btn-hero">View all Projects</a>
             </div>
             <div class="col-lg">
                 <img src="images/ranem.jpg" class="img-fluid my-pic" alt="ranem al haffar picture">
+            </div>
+        </div>
+        <div class="row pets text-muted">
+            <h3>My Pets</h3>
+            <p>One conversation starter with me could be Pets, I am a big animal rights supporter, I would love to
+                someday work
+                such an organization.<br>These are my pets, all of them are rescue cases I take theme in and take care
+                of them I
+                Like to think of it as a way to give back, and be a voice to the voiceless, where web Design came in
+                really handy for me
+                as it is wonderful way to reach a wide range of people.
+            </p>
+            <div class="col-lg-3 col-sm-12">
+                <img src="images/tomy.jpg" alt="tomy cat" class="cat-pic">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+                <img src="images/simba.jpg" alt="tomy cat" class="cat-pic">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+                <img src="images/mimi.jpg" alt="tomy cat" class="cat-pic">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+                <img src="images/tama.jpg" alt="tomy cat" class="cat-pic">
             </div>
         </div>
     </div>
