--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     actual code, The project is available to any one as i have kept it Open source and can be found on
                     my Github account.
                 </p>
-                <a href="/work.html" class="btn project-btn mt-5">
+                <a href="https://sparkling-creponne-19f244.netlify.app/" class="btn project-btn mt-5" target="_blank">
                     View project details
                 </a>
             </div>
@@ -87,7 +87,7 @@
                     button toggler as a fun twist, this project is also open sourced and can be found on my Github
                     account.
                 </p>
-                <a href="/work.html" class="btn project-btn mt-5">
+                <a href="https://rad-tapioca-9ba867.netlify.app/" class="btn project-btn mt-5" target="_blank">
                     View project details
                 </a>
             </div>
@@ -110,7 +110,7 @@
                     the information and the Pexels API to fetch the images, this project is open source and can be found
                     on my github account.
                 </p>
-                <a href="/work.html" class="btn project-btn mt-5">
+                <a href="https://fastidious-cassata-f49242.netlify.app/" class="btn project-btn mt-5" target="_blank">
                     View project details
                 </a>
             </div>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="d-flex justify-content-center email-link mb-5">
-                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem@hotmail.com</a>
+                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem.alhaffar@hotmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
                 <a href="https://github.com/Ranem97" target="_blank" title="Ranem Github profile">
