--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="d-flex justify-content-center email-link mb-5">
-                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem@hotmail.com</a>
+                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem.alhaffar@hotmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
                 <a href="https://github.com/Ranem97" target="_blank" title="Ranem Github profile">
