--- a/work.html
+++ b/work.html
@@ -49,33 +49,41 @@
             <h1 class=" mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
                 <div class="col-md-6 mb-4 ">
-                    <img src="images/yougurt.jpg" class="img-fluid" alt="Yogurt Project">
-                    <h3 class="text-center">Yogurt Project</h3>
+                    <a href="https://rad-tapioca-9ba867.netlify.app/" target="_blank">
+                        <img src="images/weather-night.jpg" class="img-fluid" alt="Yogurt Project">
+                    </a>
+                    <h3 class="text-center">Weather Project</h3>
                     <p class="text-center text-muted">Build with
-                        HTML & CSS
+                        React
                     </p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="images/weather.png" class="img-fluid" alt="Weather Project">
+                    <a href="https://rad-tapioca-9ba867.netlify.app/" target="_blank">
+                        <img src="images/weather-day.jpg" class="img-fluid" alt="Weather Project">
+                    </a>
                     <h3 class="text-center">Weather Project</h3>
                     <p class="text-center text-muted">Build with
-                        HTML & CSS and Javascript
+                        React
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="images/dictionary.jpg" class="img-fluid" alt="Dictionary Project">
+                    <a href="https://fastidious-cassata-f49242.netlify.app/" target="_blank">
+                        <img src="images/dictionary.png" class="img-fluid" alt="Dictionary Project">
+                    </a>
                     <h3 class="text-center">Dictionary Project</h3>
                     <p class="text-center text-muted">Build with
                         React
                     </p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="images/Translation.jpg" class="img-fluid" alt="Translation Project">
-                    <h3 class="text-center">Translation Project</h3>
+                    <a href="https://sparkling-creponne-19f244.netlify.app/" target="_blank">
+                        <img src="images/photograper-portfolio.png" class="img-fluid" alt="Translation Project">
+                    </a>
+                    <h3 class="text-center">Photograper portfolio</h3>
                     <p class="text-center text-muted">Build with
-                        React
+                        HTML & CSS
                     </p>
                 </div>
             </div>
@@ -97,7 +105,7 @@
             </div>
 
             <div class="d-flex justify-content-center email-link mb-5">
-                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem@hotmail.com</a>
+                <a href="mailto:ranem.alhaffar@hotmail.com" title="email ranem">ranem.alhaffar@hotmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
                 <a href="https://github.com/Ranem97" target="_blank" title="Ranem Github profile">
