added recipe project

--- a/about.html
+++ b/about.html
@@ -26,8 +26,10 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
+                title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
+                title="Homepage">
             <ul>
                 <li>
                     <a href="./index.html" title="homepage">Home</a>
