--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,10 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
+                title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
+                title="Homepage">
             <ul>
                 <li>
                     <a href="./index.html" title="homepage">Home</a>
@@ -44,9 +46,9 @@
             </ul>
         </nav>
     </div>
-    <div class="container">
+    <div class="container text-center">
         <div class="content">
-            <h1>Let's get in touch!</h1>
+            <h1 class="mb-5">Let's get in touch!</h1>
             <h3>email</h3>
             <a href="mailto:ranem.alhaffar@hotmail.com" target="_blank" title="ranem email">
                 <p>ranem.alhaffar@hotmail.com</p>
