--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
+                title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
+                title="Homepage">
             <ul>
                 <li class="active">
                     <a href="/" title="homepage">Home</a>
@@ -114,6 +116,27 @@
                     View project details
                 </a>
             </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col project-discribtion mb-5">
+                <h2 class="mb-5">
+                    Recipes Collection
+                </h2>
+                <p class="text-muted">
+                    This project's design was provided to me by the good people at SheCodes, it was initially a Figma
+                    design
+                    and i took it upon myself to turn it into code, it also gave me a chance to practice SCSS as a
+                    design Referance,
+                    this project is open source and can be found on my github account.
+                </p>
+                <a href="https://fastidious-cassata-f49242.netlify.app/" class="btn project-btn mt-5" target="_blank">
+                    View project details
+                </a>
+            </div>
+            <div class="col d-none d-lg-block">
+                <img src="images/recipe-project.png" alt="recipe page" class="img-fluid">
+            </div>
+
         </div>
     </div>
     <div>
