--- a/work.html
+++ b/work.html
@@ -26,8 +26,10 @@
 <body>
     <div class="container">
         <nav class=" d-flex justify-content-between">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-none d-md-block" title="Homepage">
-            <img src="./images/logo.png" alt="Ranem al haffar's logo" class="logo d-block d-md-none" title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-none d-md-block"
+                title="Homepage">
+            <img src="./images/logo-light.jpg" alt="Ranem al haffar's logo" class="logo d-block d-md-none"
+                title="Homepage">
             <ul>
                 <li>
                     <a href="./index.html" title="homepage">Home</a>
@@ -86,6 +88,26 @@
                         HTML & CSS
                     </p>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <a href="https://idyllic-sawine-6bebe7.netlify.app/" target="_blank">
+                        <img src="images/recipe-project.png" class="img-fluid" alt="Dictionary Project">
+                    </a>
+                    <h3 class="text-center">Recipes Collection</h3>
+                    <p class="text-center text-muted">Build with
+                        HTML & SCSS & JS
+                    </p>
+                </div>
+                <!-- <div class="col-md-6 mb-4">
+                    <a href="https://sparkling-creponne-19f244.netlify.app/" target="_blank">
+                        <img src="images/photograper-portfolio.png" class="img-fluid" alt="Translation Project">
+                    </a>
+                    <h3 class="text-center">Photograper portfolio</h3>
+                    <p class="text-center text-muted">Build with
+                        HTML & CSS
+                    </p>
+                </div> -->
             </div>
         </div>
     </div>
