changed location from sy to uae

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <div class="row mb-5">
             <div class="col-lg mt-5">
                 <h1>Hi I am Ranem Al-Haffar</h1>
-                <h3>Frontend Developer, based in Syria.</h3>
+                <h3>Frontend Developer, based in Dubai.</h3>
                 <p class="text-muted">
                     I graduated from Damascus university in 2021, from the computer and automation engineering,
                     computer major.<br>
