--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#6c63ff">
-    <meta name="description" content="Ranem al haffar a computer engineer & a Front-end developer based in syria.">
+    <meta name="description" content="Ranem al haffar a computer engineer & Front-end developer based in Dubai.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -51,7 +51,7 @@
             🙋‍♀️ Hi I'am
         </h2>
         <h1>Ranem Al-Haffar</h1>
-        <p class="mb-3">Front-end developer based is syria</p>
+        <p class="mb-3">Front-end developer based is Dubai</p>
         <a href="contact.html" class="btn btn-hero" title="contact ranem">Contact me</a>
     </div>
     <p class="text-center m-5">
