--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <script src="https://kit.fontawesome.com/5c0bd128e0.js" crossorigin="anonymous"></script>
     <title>Contact - Ranem Al-Haffar</title>
@@ -64,6 +67,40 @@
             </a>
         </div>
     </div>
+    <div class="wrapper">
+        <header>Send Me a Message</header>
+        <form action="#">
+            <div class="dbl-field">
+                <div class="field">
+                    <input type="text" name="name" placeholder="Enter your Name">
+                    <i class="fas fa-user"></i>
+                </div>
+                <div class="field">
+                    <input type="text" name="email" placeholder="Enter your Email">
+                    <i class="fas fa-envelope"></i>
+                </div>
+            </div>
+            <div class="dbl-field">
+                <div class="field">
+                    <input type="text" name="phone" placeholder="Enter your Phone">
+                    <i class="fas fa-phone-alt"></i>
+                </div>
+                <div class="field">
+                    <input type="text" name="website" placeholder="Enter your Website">
+                    <i class="fas fa-globe"></i>
+                </div>
+            </div>
+            <div class="message">
+                <textarea placeholder="Enter your Message" name="message"></textarea>
+            <i class="material-icons">message</i>
+            </div>
+            <div class="button-area">
+                <button type="submit">Send Message</button>
+                <span>Sending your message...</span>
+            </div>
+        </form>
+        
+    </div>
     <div>
         <footer>
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
@@ -102,7 +139,7 @@
             </p>
         </footer>
     </div>
-
+<script src="./script.js"></script>
 </body>
 
 </html>
