--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
             </p>
         </footer>
     </div>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
