--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     </div>
     <div class="wrapper">
         <header>Send Me a Message</header>
-        <form action="#">
+        <form action="https://formsubmit.co/ranem.alhaffar.com" method="POST">
             <div class="dbl-field">
                 <div class="field">
                     <input type="text" name="name" placeholder="Enter your Name">
